--- a/MineColab.ipynb
+++ b/MineColab.ipynb
@@ -168,11 +168,11 @@
         "# - 1.9.4\n",
         "# - 1.8.8\n",
         "# Newer versions might work too, however this isn't guaranteed.\n",
-        "version = '1.19.2'\n",
+        "version = '1.20.1'\n",
         "forge_version = \"43.2.8\"  # If you are going to use forge \n",
         "\n",
         "#Chose server type. Currently available versions: fabric, paper, forge\n",
-        "server_type = 'paper'\n",
+        "server_type = 'forge'\n",
         "\n",
         "from google.colab import drive\n",
         "import requests\n",
